crates/daemon/tests/snapshots/cli_help__cli_help_drafts.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Manage drafts: list (default), show scheduled sends, recover orphaned in-flight sends, resume one for retry, edit, delete, or sync drafts with a provider

Usage: mxr drafts [OPTIONS] [COMMAND]

Commands:
  list       Show all drafts (default if no subcommand)
  scheduled  Show drafts scheduled to send later that have not gone out yet, soonest first. Schedule with `mxr send <draft-id> --at <TIME>`; cancel with `mxr unsend <draft-id>`
  recover    Show drafts that look orphaned mid-send (status `'sending'`, stale heartbeat). The startup loop already auto-resets these after 1h; this surfaces them earlier so you can act now
  resume     Force-reset an orphaned draft to `'draft'` status so it can be re-sent via the normal pipeline. No-op if the draft is already in `'draft'`
  delete     Permanently delete a draft and its linked provider draft, if present. `discard` remains as an alias for compatibility with earlier releases [alias: discard]
  push       Link a local draft to the account's provider draft mailbox. The first push creates it; later edits and pushes update the same provider draft
  edit       Open an existing draft in `$EDITOR` and re-save it in place under the same draft id. No new draft is created and nothing is discarded
  help       Print this message or the help of the given subcommand(s)

Options:
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
