crates/daemon/tests/snapshots/cli_help__cli_help_drafts_discard.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Permanently delete a draft and its linked provider draft, if present. `discard` remains as an alias for compatibility with earlier releases

Usage: mxr drafts delete [OPTIONS] <DRAFT_ID>

Arguments:
  <DRAFT_ID>  Draft ID to delete

Options:
      --dry-run  Show the exact draft that would be deleted without deleting it
  -h, --help     Print help
