crates/daemon/tests/snapshots/cli_help__cli_help_drafts_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show all drafts (default if no subcommand)

Usage: mxr drafts list

Options:
  -h, --help  Print help
