crates/daemon/tests/snapshots/cli_help__cli_help_drafts_push.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Copy a local draft to the account's provider draft mailbox. The local draft is preserved; repeating the command creates another provider copy

Usage: mxr drafts push [OPTIONS] <DRAFT_ID>

Arguments:
  <DRAFT_ID>  Local draft ID to copy to the provider

Options:
      --dry-run  Show the exact draft and provider without creating the provider copy
  -h, --help     Print help
