crates/daemon/tests/snapshots/cli_help__cli_help_events.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Watch daemon events

Usage: mxr events [OPTIONS]

Options:
      --type <EVENT_TYPE>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
